Perormance improvments and bug fixes

--- a/Vessles/presets/v.inputconfig.json
+++ b/Vessles/presets/v.inputconfig.json
@@ -5,7 +5,7 @@
 			"1" : 			{
 				"id" : 1,
 				"data" : 				{
-					"soprano::dry" : [ 0.0 ],
+					"soprano::dry" : [ 1.0 ],
 					"soprano::dryPan" : [ 0.0 ],
 					"soprano::live.gain~" : [ 0.0 ],
 					"soprano::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
@@ -19,7 +19,8 @@
 					"soprano::denoise::smear" : [ 2 ],
 					"soprano::denoise::smooth" : [ 0.693 ],
 					"soprano::denoise::thresh" : [ 0.051 ],
-					"tenor::dry" : [ 0.0 ],
+					"soprano::inputChan" : [ 4 ],
+					"tenor::dry" : [ 1.0 ],
 					"tenor::dryPan" : [ 0.0 ],
 					"tenor::live.gain~" : [ 0.0 ],
 					"tenor::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
@@ -33,7 +34,8 @@
 					"tenor::denoise::smear" : [ 2 ],
 					"tenor::denoise::smooth" : [ 0.693 ],
 					"tenor::denoise::thresh" : [ 0.051 ],
-					"flute::dry" : [ 0.0 ],
+					"tenor::inputChan" : [ 3 ],
+					"flute::dry" : [ 1.0 ],
 					"flute::dryPan" : [ 0.0 ],
 					"flute::live.gain~" : [ 0.0 ],
 					"flute::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
@@ -47,7 +49,8 @@
 					"flute::denoise::smear" : [ 2 ],
 					"flute::denoise::smooth" : [ 0.693 ],
 					"flute::denoise::thresh" : [ 0.051 ],
-					"bassFlute::dry" : [ 0.0 ],
+					"flute::inputChan" : [ 2 ],
+					"bassFlute::dry" : [ 1.0 ],
 					"bassFlute::dryPan" : [ 0.0 ],
 					"bassFlute::live.gain~" : [ 0.0 ],
 					"bassFlute::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
@@ -61,7 +64,8 @@
 					"bassFlute::denoise::smear" : [ 2 ],
 					"bassFlute::denoise::smooth" : [ 0.693 ],
 					"bassFlute::denoise::thresh" : [ 0.051 ],
-					"clarinet::dry" : [ 0.0 ],
+					"bassFlute::inputChan" : [ 2 ],
+					"clarinet::dry" : [ 1.0 ],
 					"clarinet::dryPan" : [ 0.0 ],
 					"clarinet::live.gain~" : [ 0.0 ],
 					"clarinet::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
@@ -75,7 +79,8 @@
 					"clarinet::denoise::smear" : [ 2 ],
 					"clarinet::denoise::smooth" : [ 0.693 ],
 					"clarinet::denoise::thresh" : [ 0.051 ],
-					"xylo::dry" : [ 0.0 ],
+					"clarinet::inputChan" : [ 5 ],
+					"xylo::dry" : [ 1.0 ],
 					"xylo::dryPan" : [ 0.0 ],
 					"xylo::live.gain~" : [ 0.0 ],
 					"xylo::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
@@ -89,7 +94,8 @@
 					"xylo::denoise::smear" : [ 2 ],
 					"xylo::denoise::smooth" : [ 0.693 ],
 					"xylo::denoise::thresh" : [ 0.051 ],
-					"perc::dry" : [ 0.0 ],
+					"xylo::inputChan" : [ 8 ],
+					"perc::dry" : [ 1.0 ],
 					"perc::dryPan" : [ 0.0 ],
 					"perc::live.gain~" : [ 0.0 ],
 					"perc::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
@@ -103,7 +109,8 @@
 					"perc::denoise::smear" : [ 2 ],
 					"perc::denoise::smooth" : [ 0.693 ],
 					"perc::denoise::thresh" : [ 0.051 ],
-					"viola::dry" : [ 0.0 ],
+					"perc::inputChan" : [ 7 ],
+					"viola::dry" : [ 1.0 ],
 					"viola::dryPan" : [ 0.0 ],
 					"viola::live.gain~" : [ 0.0 ],
 					"viola::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
@@ -117,7 +124,8 @@
 					"viola::denoise::smear" : [ 2 ],
 					"viola::denoise::smooth" : [ 0.693 ],
 					"viola::denoise::thresh" : [ 0.051 ],
-					"bass::dry" : [ 0.0 ],
+					"viola::inputChan" : [ 1 ],
+					"bass::dry" : [ 1.0 ],
 					"bass::dryPan" : [ 0.0 ],
 					"bass::live.gain~" : [ 0.0 ],
 					"bass::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
@@ -130,7 +138,8 @@
 					"bass::denoise::fftsize" : [ 2 ],
 					"bass::denoise::smear" : [ 2 ],
 					"bass::denoise::smooth" : [ 0.693 ],
-					"bass::denoise::thresh" : [ 0.051 ]
+					"bass::denoise::thresh" : [ 0.051 ],
+					"bass::inputChan" : [ 6 ]
 				}
 
 			}
