pan based on position

--- a/Vessles/presets/v.inputconfig.json
+++ b/Vessles/presets/v.inputconfig.json
@@ -6,8 +6,9 @@
 				"id" : 1,
 				"data" : 				{
 					"soprano::dry" : [ 1.0 ],
-					"soprano::dryPan" : [ 0.0 ],
+					"soprano::dryPan" : [ -0.25 ],
 					"soprano::live.gain~" : [ 0.0 ],
+					"soprano::inputChan" : [ 4 ],
 					"soprano::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
 					"soprano::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
 					"soprano::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
@@ -19,10 +20,10 @@
 					"soprano::denoise::smear" : [ 2 ],
 					"soprano::denoise::smooth" : [ 0.693 ],
 					"soprano::denoise::thresh" : [ 0.051 ],
-					"soprano::inputChan" : [ 4 ],
 					"tenor::dry" : [ 1.0 ],
-					"tenor::dryPan" : [ 0.0 ],
+					"tenor::dryPan" : [ 0.25 ],
 					"tenor::live.gain~" : [ 0.0 ],
+					"tenor::inputChan" : [ 4 ],
 					"tenor::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
 					"tenor::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
 					"tenor::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
@@ -34,10 +35,10 @@
 					"tenor::denoise::smear" : [ 2 ],
 					"tenor::denoise::smooth" : [ 0.693 ],
 					"tenor::denoise::thresh" : [ 0.051 ],
-					"tenor::inputChan" : [ 3 ],
 					"flute::dry" : [ 1.0 ],
-					"flute::dryPan" : [ 0.0 ],
+					"flute::dryPan" : [ -0.5 ],
 					"flute::live.gain~" : [ 0.0 ],
+					"flute::inputChan" : [ 4 ],
 					"flute::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
 					"flute::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
 					"flute::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
@@ -49,10 +50,10 @@
 					"flute::denoise::smear" : [ 2 ],
 					"flute::denoise::smooth" : [ 0.693 ],
 					"flute::denoise::thresh" : [ 0.051 ],
-					"flute::inputChan" : [ 2 ],
 					"bassFlute::dry" : [ 1.0 ],
-					"bassFlute::dryPan" : [ 0.0 ],
+					"bassFlute::dryPan" : [ -0.5 ],
 					"bassFlute::live.gain~" : [ 0.0 ],
+					"bassFlute::inputChan" : [ 4 ],
 					"bassFlute::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
 					"bassFlute::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
 					"bassFlute::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
@@ -64,10 +65,10 @@
 					"bassFlute::denoise::smear" : [ 2 ],
 					"bassFlute::denoise::smooth" : [ 0.693 ],
 					"bassFlute::denoise::thresh" : [ 0.051 ],
-					"bassFlute::inputChan" : [ 2 ],
 					"clarinet::dry" : [ 1.0 ],
-					"clarinet::dryPan" : [ 0.0 ],
+					"clarinet::dryPan" : [ 0.5 ],
 					"clarinet::live.gain~" : [ 0.0 ],
+					"clarinet::inputChan" : [ 4 ],
 					"clarinet::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
 					"clarinet::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
 					"clarinet::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
@@ -79,10 +80,10 @@
 					"clarinet::denoise::smear" : [ 2 ],
 					"clarinet::denoise::smooth" : [ 0.693 ],
 					"clarinet::denoise::thresh" : [ 0.051 ],
-					"clarinet::inputChan" : [ 5 ],
 					"xylo::dry" : [ 1.0 ],
 					"xylo::dryPan" : [ 0.0 ],
 					"xylo::live.gain~" : [ 0.0 ],
+					"xylo::inputChan" : [ 4 ],
 					"xylo::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
 					"xylo::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
 					"xylo::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
@@ -94,10 +95,10 @@
 					"xylo::denoise::smear" : [ 2 ],
 					"xylo::denoise::smooth" : [ 0.693 ],
 					"xylo::denoise::thresh" : [ 0.051 ],
-					"xylo::inputChan" : [ 8 ],
 					"perc::dry" : [ 1.0 ],
 					"perc::dryPan" : [ 0.0 ],
 					"perc::live.gain~" : [ 0.0 ],
+					"perc::inputChan" : [ 4 ],
 					"perc::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
 					"perc::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
 					"perc::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
@@ -109,10 +110,10 @@
 					"perc::denoise::smear" : [ 2 ],
 					"perc::denoise::smooth" : [ 0.693 ],
 					"perc::denoise::thresh" : [ 0.051 ],
-					"perc::inputChan" : [ 7 ],
 					"viola::dry" : [ 1.0 ],
-					"viola::dryPan" : [ 0.0 ],
+					"viola::dryPan" : [ -0.75 ],
 					"viola::live.gain~" : [ 0.0 ],
+					"viola::inputChan" : [ 4 ],
 					"viola::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
 					"viola::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
 					"viola::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
@@ -124,10 +125,10 @@
 					"viola::denoise::smear" : [ 2 ],
 					"viola::denoise::smooth" : [ 0.693 ],
 					"viola::denoise::thresh" : [ 0.051 ],
-					"viola::inputChan" : [ 1 ],
 					"bass::dry" : [ 1.0 ],
-					"bass::dryPan" : [ 0.0 ],
+					"bass::dryPan" : [ 0.75 ],
 					"bass::live.gain~" : [ 0.0 ],
+					"bass::inputChan" : [ 4 ],
 					"bass::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
 					"bass::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
 					"bass::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
@@ -138,8 +139,7 @@
 					"bass::denoise::fftsize" : [ 2 ],
 					"bass::denoise::smear" : [ 2 ],
 					"bass::denoise::smooth" : [ 0.693 ],
-					"bass::denoise::thresh" : [ 0.051 ],
-					"bass::inputChan" : [ 6 ]
+					"bass::denoise::thresh" : [ 0.051 ]
 				}
 
 			}
