--- a/Vessles/presets/v.inputconfig.json
+++ b/Vessles/presets/v.inputconfig.json
@@ -6,140 +6,41 @@
 				"id" : 1,
 				"data" : 				{
 					"soprano::dry" : [ 1.0 ],
-					"soprano::dryPan" : [ -0.25 ],
+					"soprano::dryPan" : [ 0.5 ],
 					"soprano::live.gain~" : [ 0.0 ],
 					"soprano::inputChan" : [ 4 ],
-					"soprano::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
-					"soprano::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
-					"soprano::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
-					"soprano::compressor::bufferGen.compressor.gui::knee" : [ 0.13381969775925 ],
-					"soprano::compressor::bufferGen.compressor.gui::mix" : [ 1.0 ],
-					"soprano::compressor::bufferGen.compressor.gui::thresh" : [ 0.0 ],
-					"soprano::denoise::cuttoff" : [ 1 ],
-					"soprano::denoise::fftsize" : [ 2 ],
-					"soprano::denoise::smear" : [ 2 ],
-					"soprano::denoise::smooth" : [ 0.693 ],
-					"soprano::denoise::thresh" : [ 0.051 ],
 					"tenor::dry" : [ 1.0 ],
-					"tenor::dryPan" : [ 0.25 ],
+					"tenor::dryPan" : [ 0.5 ],
 					"tenor::live.gain~" : [ 0.0 ],
 					"tenor::inputChan" : [ 4 ],
-					"tenor::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
-					"tenor::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
-					"tenor::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
-					"tenor::compressor::bufferGen.compressor.gui::knee" : [ 0.13381969775925 ],
-					"tenor::compressor::bufferGen.compressor.gui::mix" : [ 1.0 ],
-					"tenor::compressor::bufferGen.compressor.gui::thresh" : [ 0.0 ],
-					"tenor::denoise::cuttoff" : [ 1 ],
-					"tenor::denoise::fftsize" : [ 2 ],
-					"tenor::denoise::smear" : [ 2 ],
-					"tenor::denoise::smooth" : [ 0.693 ],
-					"tenor::denoise::thresh" : [ 0.051 ],
 					"flute::dry" : [ 1.0 ],
-					"flute::dryPan" : [ -0.5 ],
+					"flute::dryPan" : [ 0.5 ],
 					"flute::live.gain~" : [ 0.0 ],
 					"flute::inputChan" : [ 4 ],
-					"flute::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
-					"flute::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
-					"flute::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
-					"flute::compressor::bufferGen.compressor.gui::knee" : [ 0.13381969775925 ],
-					"flute::compressor::bufferGen.compressor.gui::mix" : [ 1.0 ],
-					"flute::compressor::bufferGen.compressor.gui::thresh" : [ 0.0 ],
-					"flute::denoise::cuttoff" : [ 1 ],
-					"flute::denoise::fftsize" : [ 2 ],
-					"flute::denoise::smear" : [ 2 ],
-					"flute::denoise::smooth" : [ 0.693 ],
-					"flute::denoise::thresh" : [ 0.051 ],
 					"bassFlute::dry" : [ 1.0 ],
-					"bassFlute::dryPan" : [ -0.5 ],
+					"bassFlute::dryPan" : [ 0.5 ],
 					"bassFlute::live.gain~" : [ 0.0 ],
 					"bassFlute::inputChan" : [ 4 ],
-					"bassFlute::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
-					"bassFlute::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
-					"bassFlute::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
-					"bassFlute::compressor::bufferGen.compressor.gui::knee" : [ 0.13381969775925 ],
-					"bassFlute::compressor::bufferGen.compressor.gui::mix" : [ 1.0 ],
-					"bassFlute::compressor::bufferGen.compressor.gui::thresh" : [ 0.0 ],
-					"bassFlute::denoise::cuttoff" : [ 1 ],
-					"bassFlute::denoise::fftsize" : [ 2 ],
-					"bassFlute::denoise::smear" : [ 2 ],
-					"bassFlute::denoise::smooth" : [ 0.693 ],
-					"bassFlute::denoise::thresh" : [ 0.051 ],
 					"clarinet::dry" : [ 1.0 ],
 					"clarinet::dryPan" : [ 0.5 ],
 					"clarinet::live.gain~" : [ 0.0 ],
 					"clarinet::inputChan" : [ 4 ],
-					"clarinet::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
-					"clarinet::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
-					"clarinet::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
-					"clarinet::compressor::bufferGen.compressor.gui::knee" : [ 0.13381969775925 ],
-					"clarinet::compressor::bufferGen.compressor.gui::mix" : [ 1.0 ],
-					"clarinet::compressor::bufferGen.compressor.gui::thresh" : [ 0.0 ],
-					"clarinet::denoise::cuttoff" : [ 1 ],
-					"clarinet::denoise::fftsize" : [ 2 ],
-					"clarinet::denoise::smear" : [ 2 ],
-					"clarinet::denoise::smooth" : [ 0.693 ],
-					"clarinet::denoise::thresh" : [ 0.051 ],
 					"xylo::dry" : [ 1.0 ],
-					"xylo::dryPan" : [ 0.0 ],
+					"xylo::dryPan" : [ 0.5 ],
 					"xylo::live.gain~" : [ 0.0 ],
 					"xylo::inputChan" : [ 4 ],
-					"xylo::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
-					"xylo::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
-					"xylo::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
-					"xylo::compressor::bufferGen.compressor.gui::knee" : [ 0.13381969775925 ],
-					"xylo::compressor::bufferGen.compressor.gui::mix" : [ 1.0 ],
-					"xylo::compressor::bufferGen.compressor.gui::thresh" : [ 0.0 ],
-					"xylo::denoise::cuttoff" : [ 1 ],
-					"xylo::denoise::fftsize" : [ 2 ],
-					"xylo::denoise::smear" : [ 2 ],
-					"xylo::denoise::smooth" : [ 0.693 ],
-					"xylo::denoise::thresh" : [ 0.051 ],
 					"perc::dry" : [ 1.0 ],
-					"perc::dryPan" : [ 0.0 ],
+					"perc::dryPan" : [ 0.5 ],
 					"perc::live.gain~" : [ 0.0 ],
 					"perc::inputChan" : [ 4 ],
-					"perc::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
-					"perc::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
-					"perc::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
-					"perc::compressor::bufferGen.compressor.gui::knee" : [ 0.13381969775925 ],
-					"perc::compressor::bufferGen.compressor.gui::mix" : [ 1.0 ],
-					"perc::compressor::bufferGen.compressor.gui::thresh" : [ 0.0 ],
-					"perc::denoise::cuttoff" : [ 1 ],
-					"perc::denoise::fftsize" : [ 2 ],
-					"perc::denoise::smear" : [ 2 ],
-					"perc::denoise::smooth" : [ 0.693 ],
-					"perc::denoise::thresh" : [ 0.051 ],
 					"viola::dry" : [ 1.0 ],
-					"viola::dryPan" : [ -0.75 ],
+					"viola::dryPan" : [ 0.5 ],
 					"viola::live.gain~" : [ 0.0 ],
 					"viola::inputChan" : [ 4 ],
-					"viola::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
-					"viola::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
-					"viola::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
-					"viola::compressor::bufferGen.compressor.gui::knee" : [ 0.13381969775925 ],
-					"viola::compressor::bufferGen.compressor.gui::mix" : [ 1.0 ],
-					"viola::compressor::bufferGen.compressor.gui::thresh" : [ 0.0 ],
-					"viola::denoise::cuttoff" : [ 1 ],
-					"viola::denoise::fftsize" : [ 2 ],
-					"viola::denoise::smear" : [ 2 ],
-					"viola::denoise::smooth" : [ 0.693 ],
-					"viola::denoise::thresh" : [ 0.051 ],
 					"bass::dry" : [ 1.0 ],
-					"bass::dryPan" : [ 0.75 ],
+					"bass::dryPan" : [ 0.5 ],
 					"bass::live.gain~" : [ 0.0 ],
-					"bass::inputChan" : [ 4 ],
-					"bass::compressor::bufferGen.compressor.gui::comp" : [ 0.685928804021217 ],
-					"bass::compressor::bufferGen.compressor.gui::exp" : [ 1.0 ],
-					"bass::compressor::bufferGen.compressor.gui::gain" : [ 0.0 ],
-					"bass::compressor::bufferGen.compressor.gui::knee" : [ 0.13381969775925 ],
-					"bass::compressor::bufferGen.compressor.gui::mix" : [ 1.0 ],
-					"bass::compressor::bufferGen.compressor.gui::thresh" : [ 0.0 ],
-					"bass::denoise::cuttoff" : [ 1 ],
-					"bass::denoise::fftsize" : [ 2 ],
-					"bass::denoise::smear" : [ 2 ],
-					"bass::denoise::smooth" : [ 0.693 ],
-					"bass::denoise::thresh" : [ 0.051 ]
+					"bass::inputChan" : [ 4 ]
 				}
 
 			}
