Fixed bug crashing system. Added limiters to big mesh

--- a/Vessles/presets/v.inputconfig.json
+++ b/Vessles/presets/v.inputconfig.json
@@ -40,7 +40,13 @@
 					"bass::dry" : [ 1.0 ],
 					"bass::dryPan" : [ 0.8 ],
 					"bass::live.gain~" : [ 0.0 ],
-					"bass::inputChan" : [ 6 ]
+					"bass::inputChan" : [ 6 ],
+					"bpatcher::DryLevel" : [ -27.691407015943156 ],
+					"bpatcher::Electronics" : [ 0.0 ],
+					"bpatcher::dryRev" : [ 0.25 ],
+					"bpatcher::electRev" : [ 0.25 ],
+					"bpatcher::outputLevel" : [ 0.0 ],
+					"bpatcher::reverbLevel" : [ 0.0 ]
 				}
 
 			}
